# nbts

./: .gitignore  README.md  analysis.py  cn_solver.py  cn_solver_const_temp.py  cn_solver_temp.py  const_temp_sim_heat_treatments.py  crank-nicolson-example-sparse.py  dissolution_species.py  effect-on-sc-properties.py  environment.yml  gen_sim_report.py  gen_sim_report_orig.py  gen_temp_profile.py  gle_solver.py  heating_instructions.yaml  model.py  plot-dissolution-species-days.py  plot-dissolution-species.py  plot-o-production-rate.py  pyproject.toml  quantities.py  setup.py  sim_config.yml  sim_heat_treatments.py  sim_heat_treatments_const_temp.py  temperature_generator.py  test_sim_heat_treatments.py
analysis/sim_t6.0_T120/: current_density.csv  current_density_clean.csv  current_density_dirty.csv  current_suppression_factor.csv  mean_free_path.csv  oxygen_diffusion_profile.csv  (+3 more)
config/: const_temp_sim_config.yml  environment-lock.yml  environment.yml  seeds.yml  sim_config.py  sim_config.yml
scripts/: analysis.py  analyze_ramp_rates.py  analyze_temp_time_grid.py  compare_ramp_vs_const.py  compute_limits.py  const_temp_sim_heat_treatments.py  critical_current.py  optimize_recipe.py  plot-dissolution-species-days.py  plot-dissolution-species.py  plot-o-production-rate.py  plot_ciovati.py  plot_figures.py  plot_heatmaps.py  plot_magic_recipe_comparison.py  plot_pvalue_heatmaps.py  plot_ramp_rate_metrics.py  plot_ramp_rate_panel.py  plot_ramp_rates.py  plot_ramp_vs_const.py  ramp_vs_const.py  robust_optimize_recipe.py  run_multi_analysis.py  simulation_analyzer.py  smooth-max-current-position.py  smooth_current.py
simulation/: ciovati_model.py  cn_solver.py  cn_solver_const_temp.py  gen_sim_report.py  gen_temp_profile.py  quantities.py  sim_heat_treatments.py  sim_report.py  temp_profile.py
solvers/: cn_solver.py  cn_solver_const_temp.py
tests/: test_cn_solver.py
utils/: gen_sim_report.py  gen_temp_profile.py
(+30 files in other folders)
